@@ -1,27 +1,35 @@
 package it.infocert.eigor.converter.csvcen2cen;
 
+import com.amoerie.jstreams.Stream;
+import com.amoerie.jstreams.functions.Filter;
 import com.google.common.base.Charsets;
 import it.infocert.eigor.api.ConversionResult;
 import it.infocert.eigor.api.SyntaxErrorInInvoiceFormatException;
 import it.infocert.eigor.api.ToCenConversion;
 import it.infocert.eigor.api.conversion.*;
 import it.infocert.eigor.model.core.InvoiceUtils;
+import it.infocert.eigor.model.core.enums.Iso31661CountryCodes;
+import it.infocert.eigor.model.core.enums.Iso4217CurrenciesFundsCodes;
+import it.infocert.eigor.model.core.enums.Untdid1001InvoiceTypeCode;
+import it.infocert.eigor.model.core.enums.Untdid5305DutyTaxFeeCategories;
 import it.infocert.eigor.model.core.model.BG0000Invoice;
 import it.infocert.eigor.model.core.model.BTBG;
 import it.infocert.eigor.model.core.model.structure.BtBgName;
 import it.infocert.eigor.model.core.model.structure.CenStructure;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVRecord;
+import org.joda.time.format.DateTimeFormat;
 import org.reflections.Reflections;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
+
 
 
 public class CsvCen2Cen implements ToCenConversion {
@@ -29,6 +37,8 @@ public class CsvCen2Cen implements ToCenConversion {
     private final CenStructure cenStructure;
     private final InvoiceUtils utils;
     private final ConversionRegistry conversionRegistry;
+
+    private Logger log = LoggerFactory.getLogger(CsvCen2Cen.class);
 
     private Reflections reflections;
 
@@ -38,12 +48,16 @@ public class CsvCen2Cen implements ToCenConversion {
         cenStructure = new CenStructure();
         utils = new InvoiceUtils(reflections);
         conversionRegistry = new ConversionRegistry(
-                new StringToIso31661CountryCodesConverter(),
-                new StringToJavaLocalDateConverter(DateTimeFormatter.ofPattern("dd-MMM-yy", Locale.ENGLISH)),
-                new StringToJavaLocalDateConverter(DateTimeFormatter.ofPattern("yyyy-MM-dd", Locale.ENGLISH)),
+                new CountryNameToIso31661CountryCodeConverter(),
+                new LookUpEnumConversion(Iso31661CountryCodes.class),
+                new StringToJavaLocalDateConverter(DateTimeFormat.forPattern("dd-MMM-yy")),
+                new StringToJavaLocalDateConverter(DateTimeFormat.forPattern("yyyy-MM-dd")),
                 new StringToUntdid1001InvoiceTypeCodeConverter(),
+                new LookUpEnumConversion(Untdid1001InvoiceTypeCode.class),
                 new StringToIso4217CurrenciesFundsCodesConverter(),
+                new LookUpEnumConversion(Iso4217CurrenciesFundsCodes.class),
                 new StringToUntdid5305DutyTaxFeeCategoriesConverter(),
+                new LookUpEnumConversion(Untdid5305DutyTaxFeeCategories.class),
                 new StringToUnitOfMeasureConverter(),
                 new StringToDoublePercentageConverter(),
                 new StringToDoubleConverter(),
@@ -80,6 +94,7 @@ public class CsvCen2Cen implements ToCenConversion {
 
             bgbtIdFromCsv = cenRecord.get("BG/BT");
             bgbtValueFromCsv = cenRecord.get("Value");
+            log.trace("Current item from CSV: {} | {}", bgbtIdFromCsv, bgbtValueFromCsv);
 
 
 
@@ -118,7 +133,11 @@ public class CsvCen2Cen implements ToCenConversion {
                 } else {
 
                     // double chacks BT has only one single arg constructor
-                    List<Constructor<?>> constructors = Arrays.stream(btBgClass.getConstructors()).filter(c -> c.getParameterCount() == 1).collect(Collectors.toList());
+                    List<Constructor<?>> constructors = Stream.create( Arrays.asList( btBgClass.getConstructors() ) ).filter(new Filter<Constructor<?>>() {
+                        @Override public boolean apply(Constructor<?> c) {
+                            return c.getParameterTypes().length == 1;
+                        }
+                    }).toList();
                     if (constructors.size() != 1) {
                         throw new IllegalArgumentException("Just one constructor with one argument expected, " + constructors.size() + " found instead.");
                     }
@@ -129,6 +148,10 @@ public class CsvCen2Cen implements ToCenConversion {
                     Object convert = null;
                     try {
                         convert = conversionRegistry.convert(String.class, constructorParamType, bgbtValueFromCsv);
+                        log.trace("Value from CSV: '{}' has been converted to argument of type '{}' with value '{}'.",
+                                String.valueOf( bgbtValueFromCsv ),
+                                convert!=null ? convert.getClass().getName() : "<null>",
+                                String.valueOf( convert ));
                         // instantiate the BT
                         btbg = (BTBG) constructor.newInstance(convert);
                     } catch (IllegalArgumentException e) {
@@ -142,11 +165,13 @@ public class CsvCen2Cen implements ToCenConversion {
                     }
 
                 }
+                log.trace("Successfully instantiated: '{}'.", btbg);
 
             } catch (IllegalAccessException | InstantiationException | InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
             if(btbg == null) {
+                log.trace("Unable to instantiate item, skipping CSV record.");
                 continue;
             }
 
@@ -160,8 +185,8 @@ public class CsvCen2Cen implements ToCenConversion {
             for(int i=stack.size() - 1; i>=0; i--){
                 pathWhereYouAreTryingToPlaceTheBtBg = pathWhereYouAreTryingToPlaceTheBtBg + "/" + stack.get(i);
             }
-            pathWhereYouAreTryingToPlaceTheBtBg = pathWhereYouAreTryingToPlaceTheBtBg.replaceAll("/BG-0000", "/") + btbgName.toString();
-
+            pathWhereYouAreTryingToPlaceTheBtBg = pathWhereYouAreTryingToPlaceTheBtBg.replaceAll("/BG-0", "/") + btbgName.toString();
+            log.trace("Item will be placed at path '{}'.", pathWhereYouAreTryingToPlaceTheBtBg);
 
             // It search in the stack a BG that will accept the current BG/BT.
             boolean found = false;
@@ -170,6 +195,7 @@ public class CsvCen2Cen implements ToCenConversion {
                 try {
                     boolean added = utils.addChild(parentBg, btbg);
                     if(added) {
+                        log.trace("Item '{}' added as child of '{}'.", btbg, parentBg);
                         stack.push(parentBg);
                         if (btbg.denomination().toLowerCase().startsWith("bg")) {
                             stack.push(btbg);
@@ -182,7 +208,7 @@ public class CsvCen2Cen implements ToCenConversion {
             } while (!found && !stack.empty());
 
 
-            // if we browsed the full stack withouth being able to add
+            // if we browsed the full stack without being able to add
             // the current BT, then that BT was in the wrong position in the file.
             if(stack.empty()){
                 String pathWhereTheBtBgBelongs = cenStructure.findByName( btbgName ).path();
